# ecommerce-ai-platform

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Jenkinsfile  LOCAL_DEPLOYMENT_GUIDE.md  README-LOCAL.md  README.md  SIMPLE_COMMANDS.md  kubeconfig-host.yaml  kubeconfig-jenkins.yaml  package.json  test.txt
.github/workflows/: cd.yml  ci.yml
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/components/: Layout.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx
frontend/services/: api.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
infrastructure/: README.md  TRAEFIK_GUIDE.md  docker-compose.yaml
infrastructure/terraform/: README.md  main.tf  outputs.tf  terraform.prod.tfvars  terraform.tfvars  terraform.tfvars.example  tfplan  tfplan2  variables.tf
k8s/base/: ai-orchestrator-service.yaml  auth-service.yaml  certificate.yaml  cluster-issuer.yaml  file-storage-service.yaml  frontend.yaml  ingress-ai.yaml  ingress-auth.yaml  ingress-notifications.yaml  ingress-products.yaml  ingress-whatsapp.yaml  kustomization.yaml  rabbitmq-secret.yaml  (+11 more)
scripts/: install-postgres.ps1  install-traefik.ps1  setup-local.ps1
services/ai-orchestrator-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai-orchestrator-service/app/: __init__.py  config.py  db.py  gemini_client.py  groq_client.py  main.py  message_processor.py  messaging.py  phone_cache.py  prompts.py
services/ai-orchestrator-service/app/crud/: conversation_state.py  customer.py  message.py  product.py  user.py
services/ai-orchestrator-service/app/db/: __init__.py
services/ai-orchestrator-service/app/models/: conversation_state.py  customer.py  message.py  product.py  user.py
services/ai-orchestrator-service/app/schemas/: customer.py  message.py  product.py  user.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/app/: main.py  messaging.py
services/auth-service/app/api/v1/: auth.py  users.py
services/auth-service/app/core/: oauth.py  security.py
services/auth-service/app/crud/: refresh_token.py  revoked_token.py  session.py  user.py
services/auth-service/app/db/: session.py
services/auth-service/app/models/: refresh_token.py  revoked_token.py  session.py  user.py
services/auth-service/app/schemas/: session.py  user.py
services/auth-service/tests/: test_main.py
services/file-storage-service/: Dockerfile  pyproject.toml
services/file-storage-service/app/: main.py
services/file-storage-service/tests/: test_upload.py
services/stock-service/: Dockerfile  pyproject.toml
services/stock-service/app/: main.py  messaging.py
services/stock-service/app/api/v1/: products.py
services/stock-service/app/core/: dependencies.py
services/stock-service/app/crud/: product.py  user.py
services/stock-service/app/models/: product.py  user.py
services/stock-service/app/schemas/: product.py  user.py
services/stock-service/tests/: test_products_api.py
services/whatsapp-connector-service/: Dockerfile  pyproject.toml
services/whatsapp-connector-service/app/: config.py  main.py  messaging.py
services/whatsapp-connector-service/app/api/v1/: users.py  whatsapp.py
services/whatsapp-connector-service/app/clients/: whatsapp_client.py
services/whatsapp-connector-service/app/crud/: customer.py  message.py  user.py  whatsapp.py
services/whatsapp-connector-service/app/models/: customer.py  message.py  user.py
services/whatsapp-connector-service/app/schemas/: customer.py  message.py  user.py  whatsapp.py
(+63 files in other folders)
