[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Authentication service for the e-commerce platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pytest = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
passlib = {extras = ["bcrypt"], version = "*"}

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
